fix opacity on safari

--- a/style.css
+++ b/style.css
@@ -787,40 +787,31 @@ audio:focus{
 	}
 	@-webkit-keyframes fadeIn {
       0% {
-				-webkit-opacity: 0;
-				-khtml-opacity: 0;
         opacity: 0;
         transform: translate(0%, -50%);
       }
 
       20% {
-				-webkit-opacity: 0;
-				-khtml-opacity: 0;
         opacity: 0;
       }
 
       100% {
-				-webkit-opacity: 1;
-				-khtml-opacity: 1;
         opacity: 1;
       }
     }
 	@keyframes fadeIn {
       0% {
-				-webkit-opacity: 0;
 				-khtml-opacity: 0;
         opacity: 0;
         transform: translate(0%, -50%);
       }
 
       20% {
-				-webkit-opacity: 0;
 				-khtml-opacity: 0;
         opacity: 0;
       }
 
       100% {
-				-webkit-opacity: 1;
 				-khtml-opacity: 1;
         opacity: 1;
       }
